kubebench/overlays/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubebench-dashboard
spec:
  gateways: # {"$kpt-set":"kubeflow-gateway"}
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /dashboard/
    rewrite:
      uri: /dashboard/
    route:
    - destination:
        host: kubebench-dashboard.$(namespace).svc.$(clusterDomain)
        port:
          number: 80
